--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>J.S.</title>
+        <title>Movie Site</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Welcome to Janish Suneja's Website!</h1>
+        <div class="topnav">
+            <a class="active" href="#">Movies Site</a>
+            <div class="search-container">
+                <form role="search" id="form">
+                    <input type="search" id="query" name="q" placeholder="Search..."">
+                </form>
+            </div>
+        </div>
     </body>
-    
 </html>
