Added row, column, card

--- a/index.html
+++ b/index.html
@@ -13,5 +13,14 @@
                 </form>
             </div>
         </div>
+
+        <div class="row">
+            <div class="column">
+                <div class="card">
+                    <center><img src="#" class="thumbnail"></center>
+                    <h3>Movie Title</h3>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
