--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="column">
                 <div class="card">
-                    <center><img src="#" class="thumbnail"></center>
+                    <center><img src="kubo_strings.jpg" class="thumbnail"></center>
                     <h3>Movie Title</h3>
                 </div>
             </div>
