--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             </div>
         </div>
 
+        <div style="padding-left:16px"></div>
+
         <div class="row">
             <div class="column">
                 <div class="card">
