Added javascript dynamic movie search

--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
 
         <div style="padding-left:16px"></div>
 
-        <div class="row">
-            <div class="column">
-                <div class="card">
-                    <center><img src="kubo_strings.jpg" class="thumbnail"></center>
-                    <h3>Movie Title</h3>
-                    
+        <section id="section">
+           <!-- <div class="row">
+                <div class="column">
+                    <div class="card">
+                        <center><img src="kubo_strings.jpg" class="thumbnail"></center>
+                        <h3>Movie Title</h3>
+                    </div>
                 </div>
-            </div>
-        </div>
+            </div> CREATED BY JS-->
+        </section>
     </body>
+    <script src="script.js"></script>
 </html>
